fix linking, add footer and about page

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,6 +9,12 @@
     "@typescript-eslint/member-ordering": "error",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-use-before-define": ["error", { "functions": false }],
-    "@typescript-eslint/no-var-requires": "off"
+    "@typescript-eslint/no-var-requires": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
