--- a/api-server/.eslintrc.json
+++ b/api-server/.eslintrc.json
@@ -10,5 +10,11 @@
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-use-before-define": ["error", { "functions": false }],
     "@typescript-eslint/no-var-requires": "off"
-  }
+  },
+  "prettier/prettier": [
+    "error",
+    {
+      "endOfLine": "auto"
+    }
+  ]
 }
