--- a/api-server/package.json
+++ b/api-server/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mongo": "^0.1.0",
     "mongodb": "^4.4.0",
     "pg": "^8.7.3",
     "uuid": "^8.3.2"
