--- a/api-server/package.json
+++ b/api-server/package.json
@@ -20,18 +20,21 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
     "mongodb": "^4.4.0",
     "pg": "^8.7.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^7.5.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/chai": "^4.3.0",
+    "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
@@ -39,6 +42,7 @@
     "@types/node": "^17.0.18",
     "@types/pg": "^8.6.4",
     "@types/uuid": "^8.3.4",
+    "@types/ws": "^7.4.7",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "c8": "^7.11.0",
