--- a/web-server/config.json
+++ b/web-server/config.json
@@ -1,5 +1,5 @@
 {
-  "server": { "https": false, "port": 8080 },
+  "server": { "https": true, "port": 8081 },
   "client": {
     "dir": "../client/dist"
   }
