--- a/api-server/package.json
+++ b/api-server/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
     "mongodb": "^4.4.0",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "uuid": "^8.3.2",
     "ws": "^7.5.6"
@@ -40,6 +41,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.18",
+    "@types/nodemailer": "^6.4.4",
     "@types/pg": "^8.6.4",
     "@types/uuid": "^8.3.4",
     "@types/ws": "^7.4.7",
